META2/y.output
Terminals unused in grammar

    RESERVED


State 24 conflicts: 1 reduce/reduce
State 81 conflicts: 16 shift/reduce
State 83 conflicts: 16 shift/reduce
State 84 conflicts: 16 shift/reduce
State 109 conflicts: 16 shift/reduce
State 117 conflicts: 16 shift/reduce
State 118 conflicts: 16 shift/reduce
State 119 conflicts: 16 shift/reduce
State 120 conflicts: 16 shift/reduce
State 121 conflicts: 16 shift/reduce
State 122 conflicts: 16 shift/reduce
State 123 conflicts: 16 shift/reduce
State 124 conflicts: 16 shift/reduce
State 125 conflicts: 16 shift/reduce
State 126 conflicts: 16 shift/reduce
State 127 conflicts: 16 shift/reduce
State 128 conflicts: 16 shift/reduce
State 129 conflicts: 16 shift/reduce
State 130 conflicts: 16 shift/reduce
State 131 conflicts: 16 shift/reduce
State 132 conflicts: 16 shift/reduce
State 145 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: CLASS ID LBRACE declaration RBRACE

    2 declaration: MethodDecl declaration
    3            | FieldDecl declaration
    4            | SEMICOLON declaration
    5            | %empty

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    7 FieldDecl: PUBLIC STATIC Type ID FieldDeclSec SEMICOLON

    8 FieldDeclSec: COMMA ID
    9             | %empty

   10 Type: BOOL
   11     | INT
   12     | DOUBLE

   13 MethodHeader: Type ID LPAR MethodHeaderSec RPAR
   14             | VOID ID LPAR MethodHeaderSec RPAR

   15 MethodHeaderSec: FormalParams
   16                | %empty

   17 FormalParams: Type ID FormalParamsSec
   18             | STRING LSQ RSQ ID

   19 FormalParamsSec: COMMA Type ID
   20                | %empty

   21 MethodBody: LBRACE MethodBodySec RBRACE

   22 MethodBodySec: Statement
   23              | VarDecl
   24              | %empty

   25 VarDecl: Type ID VarDeclSec SEMICOLON

   26 VarDeclSec: COMMA ID
   27           | %empty

   28 Statement: StatementThird SEMICOLON
   29          | IF LPAR Expr RPAR Statement
   30          | IF LPAR Expr RPAR Statement ELSE Statement
   31          | WHILE LPAR Expr RPAR Statement
   32          | RETURN Expr SEMICOLON
   33          | RETURN SEMICOLON
   34          | LBRACE Statement RBRACE
   35          | PRINT LPAR Expr RPAR SEMICOLON
   36          | PRINT LPAR STRLIT RPAR SEMICOLON
   37          | %empty

   38 StatementThird: MethodInvocation
   39               | Assignment
   40               | ParseArgs
   41               | %empty

   42 MethodInvocation: ID LPAR MethodInvocationSec RPAR

   43 MethodInvocationSec: Expr MethodInvocationThird
   44                    | %empty

   45 MethodInvocationThird: COMMA Expr MethodInvocationThird
   46                      | %empty

   47 Assignment: ID ASSIGN Expr

   48 ParseArgs: PARSEINT LPAR ID LSQ Expr RSQ RPAR

   49 Expr: Expr PLUS Expr
   50     | Expr MINUS Expr
   51     | Expr STAR Expr
   52     | Expr DIV Expr
   53     | Expr MOD Expr
   54     | Expr AND Expr
   55     | Expr OR Expr
   56     | Expr XOR Expr
   57     | Expr LSHIFT Expr
   58     | Expr RSHIFT Expr
   59     | Expr EQ Expr
   60     | Expr GE Expr
   61     | Expr GT Expr
   62     | Expr LE Expr
   63     | Expr LT Expr
   64     | Expr NE Expr
   65     | MINUS Expr
   66     | NOT Expr
   67     | PLUS Expr
   68     | LPAR Expr RPAR
   69     | MethodInvocation
   70     | Assignment
   71     | ParseArgs
   72     | ID
   73     | ID DOTLENGTH
   74     | INTLIT
   75     | REALLIT
   76     | BOOLIT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NE (258) 64
    NOT (259) 66
    AND (260) 54
    OR (261) 55
    RBRACE (262) 1 21 34
    LBRACE (263) 1 21 34
    RPAR (264) 13 14 29 30 31 35 36 42 48 68
    RSQ (265) 18 48
    PARSEINT (266) 48
    RETURN (267) 32 33
    ELSE (268) 30
    IF (269) 29 30
    LSQ (270) 18 48
    LPAR (271) 13 14 29 30 31 35 36 42 48 68
    LE (272) 62
    GE (273) 60
    GT (274) 61
    EQ (275) 59
    LT (276) 63
    PLUS (277) 49 67
    MINUS (278) 50 65
    DIV (279) 52
    STAR (280) 51
    ASSIGN (281) 47
    COMMA (282) 8 19 26 45
    SEMICOLON (283) 4 7 25 28 32 33 35 36
    INT (284) 11
    STRING (285) 18
    WHILE (286) 31
    DOTLENGTH (287) 73
    STATIC (288) 6 7
    DOUBLE (289) 12
    PUBLIC (290) 6 7
    CLASS (291) 1
    VOID (292) 14
    MOD (293) 53
    XOR (294) 56
    RSHIFT (295) 58
    LSHIFT (296) 57
    STRLIT (297) 36
    BOOL (298) 10
    PRINT (299) 35 36
    INTLIT <lit> (300) 74
    REALLIT <lit> (301) 75
    ID <lit> (302) 1 7 8 13 14 17 18 19 25 26 42 47 48 72 73
    RESERVED <lit> (303)
    BOOLIT <lit> (304) 76


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    Program <N_no> (51)
        on left: 1
        on right: 0
    declaration <N_no> (52)
        on left: 2 3 4 5
        on right: 1 2 3 4
    MethodDecl <N_no> (53)
        on left: 6
        on right: 2
    FieldDecl <N_no> (54)
        on left: 7
        on right: 3
    FieldDeclSec <N_no> (55)
        on left: 8 9
        on right: 7
    Type <N_no> (56)
        on left: 10 11 12
        on right: 7 13 17 19 25
    MethodHeader <N_no> (57)
        on left: 13 14
        on right: 6
    MethodHeaderSec <N_no> (58)
        on left: 15 16
        on right: 13 14
    FormalParams <N_no> (59)
        on left: 17 18
        on right: 15
    FormalParamsSec <N_no> (60)
        on left: 19 20
        on right: 17
    MethodBody <N_no> (61)
        on left: 21
        on right: 6
    MethodBodySec <N_no> (62)
        on left: 22 23 24
        on right: 21
    VarDecl <N_no> (63)
        on left: 25
        on right: 23
    VarDeclSec <N_no> (64)
        on left: 26 27
        on right: 25
    Statement <N_no> (65)
        on left: 28 29 30 31 32 33 34 35 36 37
        on right: 22 29 30 31 34
    StatementThird <N_no> (66)
        on left: 38 39 40 41
        on right: 28
    MethodInvocation <N_no> (67)
        on left: 42
        on right: 38 69
    MethodInvocationSec <N_no> (68)
        on left: 43 44
        on right: 42
    MethodInvocationThird <N_no> (69)
        on left: 45 46
        on right: 43 45
    Assignment <N_no> (70)
        on left: 47
        on right: 39 70
    ParseArgs <N_no> (71)
        on left: 48
        on right: 40 71
    Expr <N_no> (72)
        on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 29 30 31 32 35 43 45 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: CLASS . ID LBRACE declaration RBRACE

    ID  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS ID . LBRACE declaration RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: CLASS ID LBRACE . declaration RBRACE

    SEMICOLON  shift, and go to state 6
    PUBLIC     shift, and go to state 7

    $default  reduce using rule 5 (declaration)

    declaration  go to state 8
    MethodDecl   go to state 9
    FieldDecl    go to state 10


State 6

    4 declaration: SEMICOLON . declaration

    SEMICOLON  shift, and go to state 6
    PUBLIC     shift, and go to state 7

    $default  reduce using rule 5 (declaration)

    declaration  go to state 11
    MethodDecl   go to state 9
    FieldDecl    go to state 10


State 7

    6 MethodDecl: PUBLIC . STATIC MethodHeader MethodBody
    7 FieldDecl: PUBLIC . STATIC Type ID FieldDeclSec SEMICOLON

    STATIC  shift, and go to state 12


State 8

    1 Program: CLASS ID LBRACE declaration . RBRACE

    RBRACE  shift, and go to state 13


State 9

    2 declaration: MethodDecl . declaration

    SEMICOLON  shift, and go to state 6
    PUBLIC     shift, and go to state 7

    $default  reduce using rule 5 (declaration)

    declaration  go to state 14
    MethodDecl   go to state 9
    FieldDecl    go to state 10


State 10

    3 declaration: FieldDecl . declaration

    SEMICOLON  shift, and go to state 6
    PUBLIC     shift, and go to state 7

    $default  reduce using rule 5 (declaration)

    declaration  go to state 15
    MethodDecl   go to state 9
    FieldDecl    go to state 10


State 11

    4 declaration: SEMICOLON declaration .

    $default  reduce using rule 4 (declaration)


State 12

    6 MethodDecl: PUBLIC STATIC . MethodHeader MethodBody
    7 FieldDecl: PUBLIC STATIC . Type ID FieldDeclSec SEMICOLON

    INT     shift, and go to state 16
    DOUBLE  shift, and go to state 17
    VOID    shift, and go to state 18
    BOOL    shift, and go to state 19

    Type          go to state 20
    MethodHeader  go to state 21


State 13

    1 Program: CLASS ID LBRACE declaration RBRACE .

    $default  reduce using rule 1 (Program)


State 14

    2 declaration: MethodDecl declaration .

    $default  reduce using rule 2 (declaration)


State 15

    3 declaration: FieldDecl declaration .

    $default  reduce using rule 3 (declaration)


State 16

   11 Type: INT .

    $default  reduce using rule 11 (Type)


State 17

   12 Type: DOUBLE .

    $default  reduce using rule 12 (Type)


State 18

   14 MethodHeader: VOID . ID LPAR MethodHeaderSec RPAR

    ID  shift, and go to state 22


State 19

   10 Type: BOOL .

    $default  reduce using rule 10 (Type)


State 20

    7 FieldDecl: PUBLIC STATIC Type . ID FieldDeclSec SEMICOLON
   13 MethodHeader: Type . ID LPAR MethodHeaderSec RPAR

    ID  shift, and go to state 23


State 21

    6 MethodDecl: PUBLIC STATIC MethodHeader . MethodBody

    LBRACE  shift, and go to state 24

    MethodBody  go to state 25


State 22

   14 MethodHeader: VOID ID . LPAR MethodHeaderSec RPAR

    LPAR  shift, and go to state 26


State 23

    7 FieldDecl: PUBLIC STATIC Type ID . FieldDeclSec SEMICOLON
   13 MethodHeader: Type ID . LPAR MethodHeaderSec RPAR

    LPAR   shift, and go to state 27
    COMMA  shift, and go to state 28

    $default  reduce using rule 9 (FieldDeclSec)

    FieldDeclSec  go to state 29


State 24

   21 MethodBody: LBRACE . MethodBodySec RBRACE

    LBRACE    shift, and go to state 30
    PARSEINT  shift, and go to state 31
    RETURN    shift, and go to state 32
    IF        shift, and go to state 33
    INT       shift, and go to state 16
    WHILE     shift, and go to state 34
    DOUBLE    shift, and go to state 17
    BOOL      shift, and go to state 19
    PRINT     shift, and go to state 35
    ID        shift, and go to state 36

    RBRACE     reduce using rule 24 (MethodBodySec)
    RBRACE     [reduce using rule 37 (Statement)]
    SEMICOLON  reduce using rule 41 (StatementThird)
    $default   reduce using rule 24 (MethodBodySec)

    Type              go to state 37
    MethodBodySec     go to state 38
    VarDecl           go to state 39
    Statement         go to state 40
    StatementThird    go to state 41
    MethodInvocation  go to state 42
    Assignment        go to state 43
    ParseArgs         go to state 44


State 25

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody .

    $default  reduce using rule 6 (MethodDecl)


State 26

   14 MethodHeader: VOID ID LPAR . MethodHeaderSec RPAR

    INT     shift, and go to state 16
    STRING  shift, and go to state 45
    DOUBLE  shift, and go to state 17
    BOOL    shift, and go to state 19

    $default  reduce using rule 16 (MethodHeaderSec)

    Type             go to state 46
    MethodHeaderSec  go to state 47
    FormalParams     go to state 48


State 27

   13 MethodHeader: Type ID LPAR . MethodHeaderSec RPAR

    INT     shift, and go to state 16
    STRING  shift, and go to state 45
    DOUBLE  shift, and go to state 17
    BOOL    shift, and go to state 19

    $default  reduce using rule 16 (MethodHeaderSec)

    Type             go to state 46
    MethodHeaderSec  go to state 49
    FormalParams     go to state 48


State 28

    8 FieldDeclSec: COMMA . ID

    ID  shift, and go to state 50


State 29

    7 FieldDecl: PUBLIC STATIC Type ID FieldDeclSec . SEMICOLON

    SEMICOLON  shift, and go to state 51


State 30

   34 Statement: LBRACE . Statement RBRACE

    LBRACE    shift, and go to state 30
    PARSEINT  shift, and go to state 31
    RETURN    shift, and go to state 32
    IF        shift, and go to state 33
    WHILE     shift, and go to state 34
    PRINT     shift, and go to state 35
    ID        shift, and go to state 36

    SEMICOLON  reduce using rule 41 (StatementThird)
    $default   reduce using rule 37 (Statement)

    Statement         go to state 52
    StatementThird    go to state 41
    MethodInvocation  go to state 42
    Assignment        go to state 43
    ParseArgs         go to state 44


State 31

   48 ParseArgs: PARSEINT . LPAR ID LSQ Expr RSQ RPAR

    LPAR  shift, and go to state 53


State 32

   32 Statement: RETURN . Expr SEMICOLON
   33          | RETURN . SEMICOLON

    NOT        shift, and go to state 54
    PARSEINT   shift, and go to state 31
    LPAR       shift, and go to state 55
    PLUS       shift, and go to state 56
    MINUS      shift, and go to state 57
    SEMICOLON  shift, and go to state 58
    INTLIT     shift, and go to state 59
    REALLIT    shift, and go to state 60
    ID         shift, and go to state 61
    BOOLIT     shift, and go to state 62

    MethodInvocation  go to state 63
    Assignment        go to state 64
    ParseArgs         go to state 65
    Expr              go to state 66


State 33

   29 Statement: IF . LPAR Expr RPAR Statement
   30          | IF . LPAR Expr RPAR Statement ELSE Statement

    LPAR  shift, and go to state 67


State 34

   31 Statement: WHILE . LPAR Expr RPAR Statement

    LPAR  shift, and go to state 68


State 35

   35 Statement: PRINT . LPAR Expr RPAR SEMICOLON
   36          | PRINT . LPAR STRLIT RPAR SEMICOLON

    LPAR  shift, and go to state 69


State 36

   42 MethodInvocation: ID . LPAR MethodInvocationSec RPAR
   47 Assignment: ID . ASSIGN Expr

    LPAR    shift, and go to state 70
    ASSIGN  shift, and go to state 71


State 37

   25 VarDecl: Type . ID VarDeclSec SEMICOLON

    ID  shift, and go to state 72


State 38

   21 MethodBody: LBRACE MethodBodySec . RBRACE

    RBRACE  shift, and go to state 73


State 39

   23 MethodBodySec: VarDecl .

    $default  reduce using rule 23 (MethodBodySec)


State 40

   22 MethodBodySec: Statement .

    $default  reduce using rule 22 (MethodBodySec)


State 41

   28 Statement: StatementThird . SEMICOLON

    SEMICOLON  shift, and go to state 74


State 42

   38 StatementThird: MethodInvocation .

    $default  reduce using rule 38 (StatementThird)


State 43

   39 StatementThird: Assignment .

    $default  reduce using rule 39 (StatementThird)


State 44

   40 StatementThird: ParseArgs .

    $default  reduce using rule 40 (StatementThird)


State 45

   18 FormalParams: STRING . LSQ RSQ ID

    LSQ  shift, and go to state 75


State 46

   17 FormalParams: Type . ID FormalParamsSec

    ID  shift, and go to state 76


State 47

   14 MethodHeader: VOID ID LPAR MethodHeaderSec . RPAR

    RPAR  shift, and go to state 77


State 48

   15 MethodHeaderSec: FormalParams .

    $default  reduce using rule 15 (MethodHeaderSec)


State 49

   13 MethodHeader: Type ID LPAR MethodHeaderSec . RPAR

    RPAR  shift, and go to state 78


State 50

    8 FieldDeclSec: COMMA ID .

    $default  reduce using rule 8 (FieldDeclSec)


State 51

    7 FieldDecl: PUBLIC STATIC Type ID FieldDeclSec SEMICOLON .

    $default  reduce using rule 7 (FieldDecl)


State 52

   34 Statement: LBRACE Statement . RBRACE

    RBRACE  shift, and go to state 79


State 53

   48 ParseArgs: PARSEINT LPAR . ID LSQ Expr RSQ RPAR

    ID  shift, and go to state 80


State 54

   66 Expr: NOT . Expr

    NOT       shift, and go to state 54
    PARSEINT  shift, and go to state 31
    LPAR      shift, and go to state 55
    PLUS      shift, and go to state 56
    MINUS     shift, and go to state 57
    INTLIT    shift, and go to state 59
    REALLIT   shift, and go to state 60
    ID        shift, and go to state 61
    BOOLIT    shift, and go to state 62

    MethodInvocation  go to state 63
    Assignment        go to state 64
    ParseArgs         go to state 65
    Expr              go to state 81


State 55

   68 Expr: LPAR . Expr RPAR

    NOT       shift, and go to state 54
    PARSEINT  shift, and go to state 31
    LPAR      shift, and go to state 55
    PLUS      shift, and go to state 56
    MINUS     shift, and go to state 57
    INTLIT    shift, and go to state 59
    REALLIT   shift, and go to state 60
    ID        shift, and go to state 61
    BOOLIT    shift, and go to state 62

    MethodInvocation  go to state 63
    Assignment        go to state 64
    ParseArgs         go to state 65
    Expr              go to state 82


State 56

   67 Expr: PLUS . Expr

    NOT       shift, and go to state 54
    PARSEINT  shift, and go to state 31
    LPAR      shift, and go to state 55
    PLUS      shift, and go to state 56
    MINUS     shift, and go to state 57
    INTLIT    shift, and go to state 59
    REALLIT   shift, and go to state 60
    ID        shift, and go to state 61
    BOOLIT    shift, and go to state 62

    MethodInvocation  go to state 63
    Assignment        go to state 64
    ParseArgs         go to state 65
    Expr              go to state 83


State 57

   65 Expr: MINUS . Expr
